[gd_scene load_steps=12 format=3 uid="uid://4y5r7qgux6xb"]

[ext_resource type="Script" uid="uid://cqum3ky660l0v" path="res://scripts/game.gd" id="1_vvjv4"]
[ext_resource type="Texture2D" uid="uid://b2f7ufc02v4h7" path="res://assets/art/map.jpg" id="2_upp8k"]
[ext_resource type="Script" uid="uid://d0648dcq073xt" path="res://scripts/character_slot.gd" id="3_5iuhb"]
[ext_resource type="Script" uid="uid://d2k1bsmrdis5u" path="res://scripts/enemy_slot.gd" id="4_dxd3s"]
[ext_resource type="Texture2D" uid="uid://jigaes6yojt6" path="res://icon.svg" id="5_xx6qq"]
[ext_resource type="PackedScene" uid="uid://dfs8mvsh1aft4" path="res://scenes/enemy.tscn" id="5_y0jde"]
[ext_resource type="Script" uid="uid://b1tji2yajqo7u" path="res://scripts/party_container.gd" id="6_choun"]
[ext_resource type="Script" uid="uid://b0cgs2p3kbkoo" path="res://scripts/farm_slot.gd" id="6_tipki"]
[ext_resource type="Resource" uid="uid://xtqgn1i38vh7" path="res://res/item_wood.tres" id="7_85g3d"]
[ext_resource type="Script" uid="uid://ekoq555ssfjy" path="res://scripts/log.gd" id="9_pcq24"]
[ext_resource type="PackedScene" uid="uid://dtxryjmrhpjdm" path="res://scenes/info_panel.tscn" id="11_ya4ey"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vvjv4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 797.0
offset_top = 334.0
offset_right = 1261.0
offset_bottom = 703.0
current_tab = 0

[node name="WorldMap" type="ScrollContainer" parent="CanvasLayer/Control/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Control" type="Control" parent="CanvasLayer/Control/TabContainer/WorldMap"]
custom_minimum_size = Vector2(872, 498)
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/TabContainer/WorldMap/Control"]
layout_mode = 0
offset_right = 872.0
offset_bottom = 498.0
texture = ExtResource("2_upp8k")
expand_mode = 3
stretch_mode = 4

[node name="Button" type="Button" parent="CanvasLayer/Control/TabContainer/WorldMap/Control"]
layout_mode = 0
offset_left = 95.0
offset_top = 60.0
offset_right = 166.0
offset_bottom = 111.0
mouse_filter = 1
text = "test
"

[node name="StartingClassContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartingClassVBox" type="VBoxContainer" parent="CanvasLayer/Control/StartingClassContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/StartingClassContainer/StartingClassVBox"]
layout_mode = 2
text = "Choose starting class
"

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 390.0
offset_right = 455.0
offset_bottom = 694.0

[node name="BattleContainer" type="Control" parent="CanvasLayer/Control/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="CharacterSlot1" type="PanelContainer" parent="CanvasLayer/Control/PanelContainer2/BattleContainer" node_paths=PackedStringArray("target_slot")]
layout_mode = 0
offset_left = 37.0
offset_top = 41.0
offset_right = 77.0
offset_bottom = 81.0
script = ExtResource("3_5iuhb")
target_slot = NodePath("../EnemySlot")

[node name="CharacterSlot2" type="PanelContainer" parent="CanvasLayer/Control/PanelContainer2/BattleContainer" node_paths=PackedStringArray("target_slot")]
layout_mode = 0
offset_left = 34.0
offset_top = 119.0
offset_right = 74.0
offset_bottom = 159.0
script = ExtResource("3_5iuhb")
target_slot = NodePath("../EnemySlot")

[node name="EnemySlot" type="PanelContainer" parent="CanvasLayer/Control/PanelContainer2/BattleContainer"]
layout_mode = 0
offset_left = 264.0
offset_top = 94.0
offset_right = 374.0
offset_bottom = 209.0
script = ExtResource("4_dxd3s")

[node name="Enemy" parent="CanvasLayer/Control/PanelContainer2/BattleContainer/EnemySlot" instance=ExtResource("5_y0jde")]
layout_mode = 2

[node name="RespawnTimer" type="Timer" parent="CanvasLayer/Control/PanelContainer2/BattleContainer/EnemySlot"]
one_shot = true

[node name="PanelContainer3" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 24.0
offset_top = 21.0
offset_right = 179.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/PanelContainer3/VBoxContainer"]
layout_mode = 2
text = "Party"

[node name="PartyContainer" type="GridContainer" parent="CanvasLayer/Control/PanelContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 2
script = ExtResource("6_choun")

[node name="CharacterSlot3" type="PanelContainer" parent="CanvasLayer/Control" node_paths=PackedStringArray("target_slot")]
layout_mode = 0
offset_left = 47.0
offset_top = 287.0
offset_right = 87.0
offset_bottom = 327.0
script = ExtResource("3_5iuhb")
target_slot = NodePath("../FarmSlot")

[node name="FarmSlot" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 127.0
offset_top = 289.0
offset_right = 167.0
offset_bottom = 329.0
script = ExtResource("6_tipki")
item_resource = ExtResource("7_85g3d")
skill_type = 8

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/FarmSlot"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
texture = ExtResource("5_xx6qq")
expand_mode = 2

[node name="PanelContainer4" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 490.0
offset_top = 574.0
offset_right = 789.0
offset_bottom = 706.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer4"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/PanelContainer4/VBoxContainer"]
layout_mode = 2
text = "Message Log"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Control/PanelContainer4/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/PanelContainer4/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("9_pcq24")

[node name="InfoPanel" parent="CanvasLayer/Control" instance=ExtResource("11_ya4ey")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="CanvasLayer/Control/TabContainer/WorldMap/Control/Button" to="." method="_on_button_pressed"]
[connection signal="child_entered_tree" from="CanvasLayer/Control/PanelContainer2/BattleContainer/EnemySlot" to="CanvasLayer/Control/PanelContainer2/BattleContainer/EnemySlot" method="_on_child_entered_tree"]
[connection signal="timeout" from="CanvasLayer/Control/PanelContainer2/BattleContainer/EnemySlot/RespawnTimer" to="CanvasLayer/Control/PanelContainer2/BattleContainer/EnemySlot" method="_on_respawn_timer_timeout"]
